--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -13,9 +13,30 @@
     <!-- 初始化css文件 -->
     <link rel="stylesheet" href="css/normalize.css">  
     <!-- 基本的公共样式css文件 -->
-    <link rel="stylesheet" href="css/normalize.css">  
+    <link rel="stylesheet" href="css/base.css">  
 </head>
 <body>
-    123
+ <!-- header部分 start-->
+<header>
+    <div class="w">
+        <a href="#">
+            <img src="images/header.jpg" width=100% height=80px alt="">
+        </a>
+    </div>
+</header>
+ <!-- header部分 end-->
+
+<!-- 快速导航栏部分 start -->
+<div class="shortcut">
+    <div class="w">
+        <ul class="fl city">
+            <li>! 北京</li>
+        </ul>
+        <ul class="fr">
+
+        </ul>
+    </div>
+</div>
+<!-- 快速导航栏部分 end -->
 </body>
 </html>
