更新京东项目

--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -30,10 +30,50 @@
 <div class="shortcut">
     <div class="w">
         <ul class="fl city">
-            <li>! 北京</li>
+            <li>
+                <i class="f10"></i>
+                <a href="#">北京 </a>
+            </li>
         </ul>
         <ul class="fr">
-
+            <li>
+                <a href="#">你好，请登录 </a>
+                <a href="#" class="f10">免费注册</a>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#">我的订单</a>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#">我的京东</a>
+                <i></i>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#">京东会员</a>
+            </li>
+            <li class="space"></li>   
+            <li>
+                <a href="#">企业采购</a>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#">客户服务</a>
+                <i></i>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#">网站导航</a>
+                <i></i>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#" class="mobile">手机京东
+                    <!-- 插入二维码 -->
+                <img src="images/mobile.png" alt="">  
+                </a>
+            </li>
         </ul>
     </div>
 </div>
