--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -78,5 +78,21 @@
     </div>
 </div>
 <!-- 快速导航栏部分 end -->
+
+<!-- 中间头部分 start -->
+<div class="w middle">
+    <div class="logo">
+        <!-- logo使用h1 用于提高权重，便于搜索引擎优化 -->
+        <div class="h1">
+            <a href="#"></a>
+        </div>
+    </div>
+    <!-- 搜索 -->
+    <div class="form">
+        
+    </div>
+</div>
+
+<!-- 中间头部分 end -->
 </body>
 </html>
