--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -89,7 +89,39 @@
     </div>
     <!-- 搜索 -->
     <div class="form">
-        
+        <input type="text" placeholder="lg显示器">
+        <button><i></i></button>
+    </div>
+    <!-- 购物车部分 -->
+    <div class="shopCar">
+        <i></i><a href="#" class="f10">我的购物车</a><span>0</span>
+    </div>
+    <!-- 关键词部分 -->
+    <div class="hotwords">
+        <a href="#" class="f10">智能黑科技</a>
+        <a href="#">吃货集结</a>
+        <a href="#">表白季</a>
+        <a href="#">苹果立减</a>
+        <a href="#">游戏手机</a>
+        <a href="#">爱车季</a>
+        <a href="#">2件8折</a>
+        <a href="#">鲜花礼品</a>
+        <a href="#">冰洗盛惠</a>
+    </div>
+    <!-- 小导航部分 -->
+    <div class="navitems">
+        <ul>
+            <li><a href="#">秒杀</a></li>
+            <li><a href="#">优惠券</a></li>
+            <li><a href="#">PLUS会员</a></li>
+            <li><a href="#">闪购</a></li>
+            <li><a href="#">拍卖</a></li>
+            <li><a href="#">京东服饰</a></li>
+            <li><a href="#">京东超市</a></li>
+            <li><a href="#">生鲜</a></li>
+            <li><a href="#">全球购</a></li>
+            <li><a href="#">京东金融</a></li>
+        </ul>
     </div>
 </div>
 
