--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -115,16 +115,51 @@
             <li><a href="#">优惠券</a></li>
             <li><a href="#">PLUS会员</a></li>
             <li><a href="#">闪购</a></li>
+            <li class="space"></li>
             <li><a href="#">拍卖</a></li>
             <li><a href="#">京东服饰</a></li>
             <li><a href="#">京东超市</a></li>
             <li><a href="#">生鲜</a></li>
+            <li class="space"></li>
             <li><a href="#">全球购</a></li>
             <li><a href="#">京东金融</a></li>
         </ul>
     </div>
+    <!-- 超级日部分 -->
+    <div class="super">
+        <a href="#">
+            <img src="images/super.jpg" alt="">
+        </a>
+    </div>
 </div>
-
 <!-- 中间头部分 end -->
+
+<!-- 页面底部分start -->
+<footer>
+    <!-- 上面的盒子 -->
+    <div class="service">
+        <div class="w">
+            <ul>
+                <li>
+                    <h5>多</h5>
+                    <p>品类齐全，轻松购物</p>
+                </li>
+                <li>
+                    <h5>多</h5>
+                    <p>品类齐全，轻松购物</p>
+                </li>
+                <li>
+                    <h5>多</h5>
+                    <p>品类齐全，轻松购物</p>
+                </li>
+                <li>
+                    <h5>多</h5>
+                    <p>品类齐全，轻松购物</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+</footer>
+<!-- 页面底部分over -->
 </body>
 </html>
