--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -136,7 +136,7 @@
 
 <!-- 页面底部分start -->
 <footer>
-    <!-- 上面的盒子 -->
+    <!-- 服务模块 -->
     <div class="service">
         <div class="w">
             <ul>
@@ -145,19 +145,70 @@
                     <p>品类齐全，轻松购物</p>
                 </li>
                 <li>
-                    <h5>多</h5>
-                    <p>品类齐全，轻松购物</p>
+                    <h5>快</h5>
+                    <p>多仓直发，极速配送</p>
                 </li>
                 <li>
-                    <h5>多</h5>
-                    <p>品类齐全，轻松购物</p>
+                    <h5>好</h5>
+                    <p>正品行货，精致服务</p>
                 </li>
                 <li>
-                    <h5>多</h5>
-                    <p>品类齐全，轻松购物</p>
+                    <h5>省</h5>
+                    <p>天天低价，畅选无忧</p>
                 </li>
             </ul>
         </div>
+    </div>
+    <!-- 帮助模块 -->
+    <div class="w help">
+        <div class="fl">
+            <dl>
+                <dt>购物指南</dt>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+            </dl>
+            <dl>
+                <dt>购物指南</dt>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+            </dl>
+            <dl>
+                <dt>购物指南</dt>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+            </dl>
+            <dl>
+                <dt>购物指南</dt>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+            </dl>
+            <dl>
+                <dt>购物指南</dt>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">购物流程</a></dd>
+            </dl>
+        </div>  
+        <div class="fr">abc</div>
     </div>
 </footer>
 <!-- 页面底部分over -->
