--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -165,51 +165,125 @@
             <dl>
                 <dt>购物指南</dt>
                 <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
+                <dd><a href="#">会员介绍</a></dd>
+                <dd><a href="#">生活旅行</a></dd>
+                <dd><a href="#">常见问题</a></dd>
+                <dd><a href="#">大家电</a></dd>
+                <dd><a href="#">联系客服</a></dd>
             </dl>
             <dl>
-                <dt>购物指南</dt>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
+                <dt>配送方式</dt>
+                <dd><a href="#">上门自提</a></dd>
+                <dd><a href="#">211限时达</a></dd>
+                <dd><a href="#">配送服务查询</a></dd>
+                <dd><a href="#">配送费收取标准</a></dd>
+                <dd><a href="#">海外配送</a></dd>
             </dl>
             <dl>
-                <dt>购物指南</dt>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
+                <dt>支付方式</dt>
+                <dd><a href="#">货到付款</a></dd>
+                <dd><a href="#">在线支付</a></dd>
+                <dd><a href="#">分期付款</a></dd>
+                <dd><a href="#">邮局汇款</a></dd>
+                <dd><a href="#">公司转账</a></dd>
             </dl>
             <dl>
-                <dt>购物指南</dt>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
+                <dt>售后服务</dt>
+                <dd><a href="#">售后政策</a></dd>
+                <dd><a href="#">价格保护</a></dd>
+                <dd><a href="#">退款说明</a></dd>
+                <dd><a href="#">返修/退换货</a></dd>
+                <dd><a href="#">取消订单</a></dd>
             </dl>
             <dl>
-                <dt>购物指南</dt>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
-                <dd><a href="#">购物流程</a></dd>
+                <dt>特色服务</dt>
+                <dd><a href="#">夺宝岛</a></dd>
+                <dd><a href="#">DIY装机</a></dd>
+                <dd><a href="#">延保服务</a></dd>
+                <dd><a href="#">京东E卡</a></dd>
+                <dd><a href="#">京东通信</a></dd>
+                <dd><a href="#">京东JD+</a></dd>
             </dl>
         </div>  
-        <div class="fr">abc</div>
+        <div class="fr coverage">
+            <h5>京东自营覆盖区县</h5>
+            <p>京东已向全国2661个区县提供自营配送服务，支持货到付款、POS机刷卡和售后上门服务。</p>
+            <a href="#">查看详情></a>
+        </div>
     </div>
+    <!-- 版权模块 -->
+    <div class="w copyright">
+        <p>
+            <a href="#">关于我们</a>
+            <span>|</span>
+            <a href="#">联系我们</a>
+            <span>|</span>
+            <a href="#">联系客服</a>
+            <span>|</span>
+            <a href="#">商家帮助</a>
+            <span>|</span>
+            <a href="#">合作招商</a>
+            <span>|</span>
+            <a href="#">营销中心</a>
+            <span>|</span>
+            <a href="#">手机京东</a>
+            <span>|</span>
+            <a href="#">友情链接</a>
+            <span>|</span>
+            <a href="#">销售联盟</a>
+            <span>|</span>
+            <a href="#">京东社区</a>
+            <span>|</span>
+            <a href="#">风险监测</a>
+            <span>|</span>
+            <a href="#">隐私政策</a>
+            <span>|</span>
+            <a href="#">京东公益</a>
+            <span>|</span>
+            <a href="#">English Site</a>
+            <span>|</span>
+            <a href="#">Media & IR</a>
+        </p>
+        <div>
+            <p>
+                京公网安备 11000002000088号
+                <span>|</span>
+                京ICP证070359号
+                <span>|</span>
+                互联网药品信息服务资格证编号(京)-经营性-2014-0008
+                <span>|</span>
+                新出发京零 字第大120007号
+            </p>
+            <p>
+                互联网出版许可证编号新出网证(京)字150号
+                <span>|</span>
+                出版物经营许可证
+                <span>|</span>
+                网络文化经营许可证京网文[2014]2148-348号
+                <span>|</span>
+                违法和不良信息举报电话：4006561155                
+            </p>
+            <p>
+                Copyright © 2004 - 2018　京东JD.com 版权所有
+                <span>|</span>
+                消费者维权热线：4006067733经营证照
+            </p>          
+            <p>
+                京东旗下网站：京东钱包
+                <span>|</span>
+                京东云  
+            </p>      
+            <p class="foot-icon">
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+            </p>
+        </div>
+    </div>
+
 </footer>
 <!-- 页面底部分over -->
 </body>
