更新中间模块

--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/normalize.css">  
     <!-- 基本的公共样式css文件 -->
     <link rel="stylesheet" href="css/base.css">  
+    <!-- 专属的首页样式css文件 -->
+    <link rel="stylesheet" href="css/index.css">  
 </head>
 <body>
  <!-- header部分 start-->
@@ -133,6 +135,140 @@
     </div>
 </div>
 <!-- 中间头部分 end -->
+
+<!-- 中间分类区域start -->
+<div class="w grid">
+    <!-- 第一列 -->
+    <div class="grid-col1 fl">
+        <ul>
+            <li><a href="#">家用电器</a></li>
+            <li>
+                <a href="#">手机</a>
+                <span>/</span>
+                <a href="#">运营商</a>
+                <span>/</span>
+                <a href="#">数码</a>
+            </li>
+            <li>
+                <a href="#">电脑</a>
+                <span>/</span>
+                <a href="#">办公</a>
+            </li>
+            <li>
+                <a href="#">家居</a>
+                <span>/</span>
+                <a href="#">家具</a>
+                <span>/</span>
+                <a href="#">家装</a>
+                <span>/</span>
+                <a href="#">厨具</a>
+            </li>
+            <li>
+                <a href="#">男装</a>
+                <span>/</span>
+                <a href="#">女装</a>
+                <span>/</span>
+                <a href="#">童装</a>
+                <span>/</span>
+                <a href="#">内衣</a>
+            </li>
+            <li>
+                <a href="#">美妆</a>
+                <span>/</span>
+                <a href="#">个护清洁</a>
+                <span>/</span>
+                <a href="#">宠物</a>
+            </li>
+            <li>
+                <a href="#">女鞋</a>
+                <span>/</span>
+                <a href="#">箱包</a>
+                <span>/</span>
+                <a href="#">钟表</a>
+                <span>/</span>
+                <a href="#">珠宝</a>
+            </li>
+            <li>
+                <a href="#">男鞋</a>
+                <span>/</span>
+                <a href="#">运动</a>
+                <span>/</span>
+                <a href="#">户外</a>
+            </li>
+            <li>
+                <a href="#">房产</a>
+                <span>/</span>
+                <a href="#">汽车</a>
+                <span>/</span>
+                <a href="#">汽车用品</a>
+            </li>
+            <li>
+                <a href="#">母婴</a>
+                <span>/</span>
+                <a href="#">玩具乐器</a>
+            </li>
+            <li>
+                <a href="#">食品</a>
+                <span>/</span>
+                <a href="#">酒类</a>
+                <span>/</span>
+                <a href="#">生鲜</a>
+                <span>/</span>
+                <a href="#">特产</a>
+            </li>
+            <li>
+                <a href="#">艺术</a>
+                <span>/</span>
+                <a href="#">礼品鲜花</a>
+                <span>/</span>
+                <a href="#">农资绿植</a>
+            </li>
+            <li>
+                <a href="#">医药保健</a>
+                <span>/</span>
+                <a href="#">计生情趣</a>
+            </li>
+            <li>
+                <a href="#">图书</a>
+                <span>/</span>
+                <a href="#">音像</a>
+                <span>/</span>
+                <a href="#">电子书</a>
+            </li>
+            <li>
+                <a href="#">机票</a>
+                <span>/</span>
+                <a href="#">酒店</a>
+                <span>/</span>
+                <a href="#">旅游</a>
+                <span>/</span>
+                <a href="#">生活</a>
+            </li>
+            <li>
+                <a href="#">理财</a>
+                <span>/</span>
+                <a href="#">众筹</a>
+                <span>/</span>
+                <a href="#">白条</a>
+                <span>/</span>
+                <a href="#">保险</a>
+            </li>
+            <li>
+                <a href="#">安装</a>
+                <span>/</span>
+                <a href="#">维修</a>
+                <span>/</span>
+                <a href="#">清洗保养</a>
+            </li>
+            
+        </ul>
+    </div>
+    <div class="grid-col2 fl">2</div>
+    <div class="grid-col3 fl">3</div>
+    <div class="grid-col4 fr">4</div>
+</div>
+
+<!-- 中间分类区域end -->
 
 <!-- 页面底部分start -->
 <footer>
