更新中间模块

--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -263,8 +263,24 @@
             
         </ul>
     </div>
-    <div class="grid-col2 fl">2</div>
-    <div class="grid-col3 fl">3</div>
+    <!-- 第二列 -->
+    <div class="grid-col2 fl">
+        <div class="grid-col2-t"><a href="#"><img src="images/col2.jpg" alt=""></a>
+            <a href="#" class="arrow-l"></a>
+            <a href="#"class="arrow-r"></a>
+            <ul class="circle">
+
+            </ul>
+        </div>
+    </div>
+    <!-- 第三列 -->
+    <div class="grid-col3 fl">
+        <div class="inner">
+            <div><a href="#"><img src="images/col3-1.jpg" width="190" height="150" alt=""></a></div>
+            <div><a href="#"><img src="images/col3-2.jpg" width="190" height="150" alt=""></a></div>
+            <div><a href="#"><img src="images/col3-3.png" width="190" height="150" alt=""></a></div>
+        </div>
+    </div>
     <div class="grid-col4 fr">4</div>
 </div>
 
