--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -266,13 +266,26 @@
     <!-- 第二列 -->
     <div class="grid-col2 fl">
         <div class="grid-col2-t"><a href="#"><img src="images/col2.jpg" alt=""></a>
-            <a href="#" class="arrow-l"></a>
-            <a href="#"class="arrow-r"></a>
+            <!-- 轮播图箭头部分 -->
+            <a href="#" class="arrow-l"><i></i></a>
+            <a href="#"class="arrow-r"><i></i></a>
+            <!-- 轮播图圆圈部分 -->
             <ul class="circle">
-
+                <li></li>
+                <li></li>
+                <li class="current"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
             </ul>
         </div>
     </div>
+
+
+
+
     <!-- 第三列 -->
     <div class="grid-col3 fl">
         <div class="inner">
