--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -282,10 +282,6 @@
             </ul>
         </div>
     </div>
-
-
-
-
     <!-- 第三列 -->
     <div class="grid-col3 fl">
         <div class="inner">
@@ -294,7 +290,17 @@
             <div><a href="#"><img src="images/col3-3.png" width="190" height="150" alt=""></a></div>
         </div>
     </div>
-    <div class="grid-col4 fr">4</div>
+    <!-- 第四列 -->
+    <div class="grid-col4 fr">
+        <!-- 登陆模块 -->
+        <div class="login">
+            <div class="login-inner"></div>
+        </div>
+        <!-- 新闻模块 -->
+        <div class="news"></div>
+        <!-- 服务扩展模块 -->
+        <div class="expand"></div>
+    </div>
 </div>
 
 <!-- 中间分类区域end -->
