--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -294,7 +294,18 @@
     <div class="grid-col4 fr">
         <!-- 登陆模块 -->
         <div class="login">
-            <div class="login-inner"></div>
+            <div class="login-inner">
+                <div class="user-avatar">
+                    <a href="#"><img src="images/no_login.jpg" width="55" alt=""></a>
+                </div>
+                <div class="user-show">
+                    <p>Hi~欢迎来到京东！</p>
+                    <p><a href="#">登录</a>
+                        <a href="#">注册</a>
+                    </p>
+                </div>
+                <div class="user-profit"></div>
+            </div>
         </div>
         <!-- 新闻模块 -->
         <div class="news"></div>
