--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -304,13 +304,40 @@
                         <a href="#">注册</a>
                     </p>
                 </div>
-                <div class="user-profit"></div>
+                <div class="user-profit">
+                    <a href="#" class="user-profit-lk">新人福利</a>
+                    <a href="#" class="user-profit-lk user-profit-plus">PLUS会员</a>
+                </div>
             </div>
         </div>
         <!-- 新闻模块 -->
-        <div class="news"></div>
+        <div class="news">
+            <div class="news-head">
+                <a href="#" class="news-head-item">促销</a>
+                <a href="#" class="news-head-item news-last">公告</a>
+                <a href="#" class="news-more">更多</a>
+                <div class="active"></div>
+            </div>
+            <div class="news-bottom">
+                <ul>
+                    <li><a href="#" class="news-item">贝尔机器人，定金10元抵100</a></li>
+                    <li><a href="#" class="news-item">爆款直降更有大牌不止5折</a></li>
+                    <li><a href="#" class="news-item">吃货抢517减300券</a></li>
+                    <li><a href="#" class="news-item">嘉兴肉粽8.9元</a></li>
+                </ul>
+            </div>
+        </div>
         <!-- 服务扩展模块 -->
-        <div class="expand"></div>
+        <div class="expand">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                </ul>
+        </div>
     </div>
 </div>
 
