主页基本完成

--- a/仿京东首页_静态/index.html
+++ b/仿京东首页_静态/index.html
@@ -321,7 +321,7 @@
             <div class="news-bottom">
                 <ul>
                     <li><a href="#" class="news-item">贝尔机器人，定金10元抵100</a></li>
-                    <li><a href="#" class="news-item">爆款直降更有大牌不止5折</a></li>
+                    <li><a href="#" class="news-item">520情人闺蜜节</a></li>
                     <li><a href="#" class="news-item">吃货抢517减300券</a></li>
                     <li><a href="#" class="news-item">嘉兴肉粽8.9元</a></li>
                 </ul>
@@ -334,6 +334,72 @@
                         <a href="#">
                             <i></i>
                             <span>话费</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i></i>
+                            <span>机票</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i></i>
+                            <span>酒店</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i></i>
+                            <span>游戏</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i></i>
+                            <span>企业购</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i></i>
+                            <span>加油卡</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i></i>
+                            <span>电影票</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i></i>
+                            <span>火车票</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i></i>
+                            <span>众筹</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i></i>
+                            <span>理财</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i></i>
+                            <span>礼品卡</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i></i>
+                            <span>白条</span>
                         </a>
                     </li>
                 </ul>
