--- a/5.travel/index.html
+++ b/5.travel/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>5.travel</title>
+    <meta name="viewport" content="width=device-width,
+    initial-scale=1.0,minimum-scale=1.0, 
+    maximum-scale=1.0,user-scalabe=0">
+    <title>去哪儿</title>
+
   </head>
   <body>
     <div id="app"></div>
