--- a/2.仿百度搜索框/index.html
+++ b/2.仿百度搜索框/index.html
@@ -91,14 +91,13 @@
     .suggest ul li:hover {
       background-color: #e5e5e5
     }
-
   </style>
 </head>
 
 <body>
   <div class="container">
     <div class="bgDiv">
-      <input type="text" class="search-input-text" value="">
+      <input type="text" class="search-input-text" value="" autofocus placeholder="关键词">
       <input type="button" value="搜索一下" class="search-input-button" id="btn">
       <div class="suggest">
         <ul id="search-result">
@@ -121,7 +120,7 @@
       }
     };
 
-    var timer = 0;
+    var timer = null;
     // 注册输入框键盘抬起事件
     searchInput.onkeyup = function (e) {
       suggestContainer.style.display = "block";
@@ -178,7 +177,7 @@
     // 事件委托 点击li标签或者点击搜索按钮跳转到百度搜索页面
     bgDiv.addEventListener("click", function (e) {
       if (e.target.nodeName.toLowerCase() === 'li') {
-        var keywords = e.target.innerHTML;
+        var keywords = e.target.innerText;
         searchInput.value = keywords;
         jumpPage();
       } else if (e.target.id === 'btn') {
@@ -195,40 +194,32 @@
       if (e.keyCode === 13) {
         jumpPage();
       };
-      // 向下
+      // 键盘向下事件
       if (e.keyCode === 40) {
         if (flag === 0) {
-          i = i + 2
+          i = i + 2;
         }
         flag = 1;
         e.preventDefault();
-        if (i >= 5) {
-          i = 0
+        if (i >= size) {
+          i = 0;
         }
         if (i < size) {
-          console.log(`触发下键之前i是${i}`)
           searchInput.value = searchResult.childNodes[i++].innerText;
-          console.log(`触发下键之后i是${i}`)
-          console.log(`==============`)
-
-
         }
       };
-      // 向上
+      // 键盘向上事件
       if (e.keyCode === 38) {
         if (flag === 1) {
-          i = i - 2
-          flag = 0
+          i = i - 2;
         }
+        flag = 0;
         e.preventDefault();
-        if (i <= 0) {
-          i = 4
+        if (i < 0) {
+          i = size - 1;
         }
         if (i > -1) {
-          console.log(`触发上键之前i是${i}`)
           searchInput.value = searchResult.childNodes[i--].innerText;
-          console.log(`触发上键之后i是${i}`)
-          console.log(`============`)
         }
       };
     }, false);
