--- a/2.仿百度搜索框/index.html
+++ b/2.仿百度搜索框/index.html
@@ -70,7 +70,7 @@
       width: 502px;
       position: absolute;
       top: 38px;
-      border: 1px solid #999;
+      border: .5px solid #999;
       background: #fff;
       display: none;
     }
@@ -140,7 +140,7 @@
           script.src = "https://www.baidu.com/su?&wd=" + encodeURI(this.value.trim()) +
             "&p=3&cb=handleSuggestion";
           document.body.appendChild(script);
-        }, 130)
+        }, 60)
       }
 
     };
@@ -150,16 +150,21 @@
       // 清空之前的数据！！
       clearContent();
       var result = res.s;
+      var resultLength = result.length;
+      console.log(resultLength)
       // 截取前五个搜索建议项
       if (result.length > 4) {
-        result = result.slice(0, 5)
+        result = result.slice(0, 5);
       }
+      var str = "";
       for (let i = 0; i < result.length; i++) {
+        str += `<li>${result[i]}</li>`
         // 动态创建li标签
-        var liObj = document.createElement("li");
-        liObj.innerHTML = result[i];
-        searchResult.appendChild(liObj);
+        // var liObj = document.createElement("li");
+        // liObj.innerHTML = result[i];
+        // searchResult.appendChild(liObj);
       }
+      searchResult.innerHTML = str;
       // 自执行匿名函数--删除用于跨域的script标签
       (function () {
         var s = document.querySelectorAll('script');
