--- a/4.响应式布局的P2P网站/index.html
+++ b/4.响应式布局的P2P网站/index.html
@@ -6,11 +6,16 @@
     <title>理财网站</title>
     <!--统一可视视口与布局视口宽度，默认缩放比例为1-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- build:css css/combined.css -->
     <link rel="stylesheet" href="css/normalize.css">
+    <!--轮播图依赖项-->
+    <link rel="stylesheet" href="js/vendor/OwlCarousel2-2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="js/vendor/OwlCarousel2-2.3.4/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <!-- endbuild -->
 </head>
 <body>
-<!--[if lte IE8]>
+<!--[if lte IE 8]>
 <p class="browserupgrade">您的浏览器版本过低，请到 <a href="https://browsehappy.com/">这里</a>
     更新您的浏览器，以获取最佳的体验</p>
 <![endif]-->
@@ -39,7 +44,7 @@
 <div class="container">
     <!--交易信息模块-->
     <div class="transaction">
-        <div class="trans-content">
+        <div class="trans-content clearfix">
             <div class="trans-data">
                 <span>平台累计成交金额</span>
                 <span class="trans-money">18999</span>
@@ -57,14 +62,34 @@
     </div>
     <!--广告模块-->
     <div class="ad">
-        <div class="item">
-            <img src="img/ad001.png" alt="">
-        </div>
-        <div class="item">
-            <img src="img/ad002.png" alt="">
-        </div>
-        <div class="item">
-            <img src="img/ad003.png" alt="">
+        <div class="owl-carousel owl-theme">
+            <a href="#">
+                <div class="item">
+                    <picture>
+                        <source srcset="img/ad001-l.png" media="(min-width: 50em)">
+                        <source srcset="img/ad001-m.png" media="(min-width: 30em)">
+                        <img src="img/ad001.png" alt="2015年度报告">
+                    </picture>
+                </div>
+            </a>
+            <a href="#">
+                <div class="item">
+                    <picture>
+                        <source srcset="img/ad002-l.png" media="(min-width: 50em)">
+                        <source srcset="img/ad002-m.png" media="(min-width: 30em)">
+                        <img src="img/ad002.png" alt="新年红包">
+                    </picture>
+                </div>
+            </a>
+            <a href="#">
+                <div class="item">
+                    <picture>
+                        <source srcset="img/ad003-l.png" media="(min-width: 50em)">
+                        <source srcset="img/ad003-m.png" media="(min-width: 30em)">
+                        <img src="img/ad003.png" alt="新手红包">
+                    </picture>
+                </div>
+            </a>
         </div>
     </div>
     <!--功能模块-->
@@ -259,5 +284,13 @@
     </ul>
     <p>北京志明互联网金融公司 版权所有 ® 2015-2018</p>
 </footer>
+
+<!--建立轮播图依赖项和组件-->
+<!-- build:js scripts/combined.js -->
+<script src="js/vendor/jquery.min.js"></script>
+<script src="js/vendor/OwlCarousel2-2.3.4/owl.carousel.min.js"></script>
+<script src="js/main.js"></script>
+<script src="js/vendor/picturefill.min.js"></script>
+<!-- endbuild -->
 </body>
 </html>
