--- a/7.常见布局/4.table实现三栏布局.html
+++ b/7.常见布局/4.table实现三栏布局.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>flex实现三栏布局</title>
+  <title>table实现三栏布局</title>
   <style>
     html body {
       height: 100%;
@@ -39,7 +39,6 @@
     .center {
       /* height: 200px; */
       background-color: aqua;
-      flex: 1;
     }
   </style>
 </head>
